# serializer version: 1
# name: test_detector[Assembly-0.5.16-inline_assembly_contract.sol]
  list([
    list([
      dict({
        'check': 'assembly',
        'confidence': 'High',
        'description': '''
          GetCode.at(address) (tests/detectors/assembly/0.5.16/inline_assembly_contract.sol#6-20) uses assembly
          	- INLINE ASM (tests/detectors/assembly/0.5.16/inline_assembly_contract.sol#7-19)
  
        ''',
        'elements': list([
          dict({
            'name': 'at',
            'source_mapping': dict({
              'ending_column': 6,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_contract.sol',
              'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_contract.sol',
              'is_dependency': False,
              'length': 707,
              'lines': list([
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
                20,
              ]),
              'start': 119,
              'starting_column': 5,
            }),
            'type': 'function',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'GetCode',
                'source_mapping': dict({
                  'ending_column': 2,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_contract.sol',
                  'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_contract.sol',
                  'is_dependency': False,
                  'length': 731,
                  'lines': list([
                    5,
                    6,
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                    21,
                  ]),
                  'start': 97,
                  'starting_column': 1,
                }),
                'type': 'contract',
              }),
              'signature': 'at(address)',
            }),
          }),
          dict({
            'name': '',
            'source_mapping': dict({
              'ending_column': 10,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_contract.sol',
              'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_contract.sol',
              'is_dependency': False,
              'length': 622,
              'lines': list([
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
                19,
              ]),
              'start': 198,
              'starting_column': 9,
            }),
            'type': 'node',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'at',
                'source_mapping': dict({
                  'ending_column': 6,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_contract.sol',
                  'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_contract.sol',
                  'is_dependency': False,
                  'length': 707,
                  'lines': list([
                    6,
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                  ]),
                  'start': 119,
                  'starting_column': 5,
                }),
                'type': 'function',
                'type_specific_fields': dict({
                  'parent': dict({
                    'name': 'GetCode',
                    'source_mapping': dict({
                      'ending_column': 2,
                      'filename_absolute': '/GENERIC_PATH',
                      'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_contract.sol',
                      'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_contract.sol',
                      'is_dependency': False,
                      'length': 731,
                      'lines': list([
                        5,
                        6,
                        7,
                        8,
                        9,
                        10,
                        11,
                        12,
                        13,
                        14,
                        15,
                        16,
                        17,
                        18,
                        19,
                        20,
                        21,
                      ]),
                      'start': 97,
                      'starting_column': 1,
                    }),
                    'type': 'contract',
                  }),
                  'signature': 'at(address)',
                }),
              }),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/assembly/0.5.16/inline_assembly_contract.sol#L6-L20',
        'id': 'ac5f8f89c2d7459785200d5d861616e04a1bbcfbb2a39cef8bef6a03222c7c21',
        'impact': 'Informational',
        'markdown': '''
          [GetCode.at(address)](tests/detectors/assembly/0.5.16/inline_assembly_contract.sol#L6-L20) uses assembly
          	- [INLINE ASM](tests/detectors/assembly/0.5.16/inline_assembly_contract.sol#L7-L19)
  
        ''',
      }),
    ]),
  ])
# ---
# name: test_detector[Assembly-0.5.16-inline_assembly_library.sol]
  list([
    list([
      dict({
        'check': 'assembly',
        'confidence': 'High',
        'description': '''
          VectorSum.sumAsm(uint256[]) (tests/detectors/assembly/0.5.16/inline_assembly_library.sol#16-22) uses assembly
          	- INLINE ASM (tests/detectors/assembly/0.5.16/inline_assembly_library.sol#18-20)
  
        ''',
        'elements': list([
          dict({
            'name': 'sumAsm',
            'source_mapping': dict({
              'ending_column': 6,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
              'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
              'is_dependency': False,
              'length': 254,
              'lines': list([
                16,
                17,
                18,
                19,
                20,
                21,
                22,
              ]),
              'start': 599,
              'starting_column': 5,
            }),
            'type': 'function',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'VectorSum',
                'source_mapping': dict({
                  'ending_column': 2,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
                  'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
                  'is_dependency': False,
                  'length': 1602,
                  'lines': list([
                    5,
                    6,
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                    21,
                    22,
                    23,
                    24,
                    25,
                    26,
                    27,
                    28,
                    29,
                    30,
                    31,
                    32,
                    33,
                    34,
                    35,
                    36,
                    37,
                    38,
                    39,
                    40,
                    41,
                    42,
                    43,
                    44,
                    45,
                    46,
                    47,
                    48,
                  ]),
                  'start': 97,
                  'starting_column': 1,
                }),
                'type': 'contract',
              }),
              'signature': 'sumAsm(uint256[])',
            }),
          }),
          dict({
            'name': '',
            'source_mapping': dict({
              'ending_column': 14,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
              'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
              'is_dependency': False,
              'length': 104,
              'lines': list([
                18,
                19,
                20,
              ]),
              'start': 733,
              'starting_column': 13,
            }),
            'type': 'node',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'sumAsm',
                'source_mapping': dict({
                  'ending_column': 6,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
                  'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
                  'is_dependency': False,
                  'length': 254,
                  'lines': list([
                    16,
                    17,
                    18,
                    19,
                    20,
                    21,
                    22,
                  ]),
                  'start': 599,
                  'starting_column': 5,
                }),
                'type': 'function',
                'type_specific_fields': dict({
                  'parent': dict({
                    'name': 'VectorSum',
                    'source_mapping': dict({
                      'ending_column': 2,
                      'filename_absolute': '/GENERIC_PATH',
                      'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
                      'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
                      'is_dependency': False,
                      'length': 1602,
                      'lines': list([
                        5,
                        6,
                        7,
                        8,
                        9,
                        10,
                        11,
                        12,
                        13,
                        14,
                        15,
                        16,
                        17,
                        18,
                        19,
                        20,
                        21,
                        22,
                        23,
                        24,
                        25,
                        26,
                        27,
                        28,
                        29,
                        30,
                        31,
                        32,
                        33,
                        34,
                        35,
                        36,
                        37,
                        38,
                        39,
                        40,
                        41,
                        42,
                        43,
                        44,
                        45,
                        46,
                        47,
                        48,
                      ]),
                      'start': 97,
                      'starting_column': 1,
                    }),
                    'type': 'contract',
                  }),
                  'signature': 'sumAsm(uint256[])',
                }),
              }),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol#L16-L22',
        'id': 'abf9dce26719358da77702aa40f23104cc83044d0b1cffb492e318360fb72b6f',
        'impact': 'Informational',
        'markdown': '''
          [VectorSum.sumAsm(uint256[])](tests/detectors/assembly/0.5.16/inline_assembly_library.sol#L16-L22) uses assembly
          	- [INLINE ASM](tests/detectors/assembly/0.5.16/inline_assembly_library.sol#L18-L20)
  
        ''',
      }),
      dict({
        'check': 'assembly',
        'confidence': 'High',
        'description': '''
          VectorSum.sumPureAsm(uint256[]) (tests/detectors/assembly/0.5.16/inline_assembly_library.sol#25-47) uses assembly
          	- INLINE ASM (tests/detectors/assembly/0.5.16/inline_assembly_library.sol#26-46)
  
        ''',
        'elements': list([
          dict({
            'name': 'sumPureAsm',
            'source_mapping': dict({
              'ending_column': 6,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
              'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
              'is_dependency': False,
              'length': 761,
              'lines': list([
                25,
                26,
                27,
                28,
                29,
                30,
                31,
                32,
                33,
                34,
                35,
                36,
                37,
                38,
                39,
                40,
                41,
                42,
                43,
                44,
                45,
                46,
                47,
              ]),
              'start': 936,
              'starting_column': 5,
            }),
            'type': 'function',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'VectorSum',
                'source_mapping': dict({
                  'ending_column': 2,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
                  'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
                  'is_dependency': False,
                  'length': 1602,
                  'lines': list([
                    5,
                    6,
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                    21,
                    22,
                    23,
                    24,
                    25,
                    26,
                    27,
                    28,
                    29,
                    30,
                    31,
                    32,
                    33,
                    34,
                    35,
                    36,
                    37,
                    38,
                    39,
                    40,
                    41,
                    42,
                    43,
                    44,
                    45,
                    46,
                    47,
                    48,
                  ]),
                  'start': 97,
                  'starting_column': 1,
                }),
                'type': 'contract',
              }),
              'signature': 'sumPureAsm(uint256[])',
            }),
          }),
          dict({
            'name': '',
            'source_mapping': dict({
              'ending_column': 10,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
              'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
              'is_dependency': False,
              'length': 671,
              'lines': list([
                26,
                27,
                28,
                29,
                30,
                31,
                32,
                33,
                34,
                35,
                36,
                37,
                38,
                39,
                40,
                41,
                42,
                43,
                44,
                45,
                46,
              ]),
              'start': 1020,
              'starting_column': 9,
            }),
            'type': 'node',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'sumPureAsm',
                'source_mapping': dict({
                  'ending_column': 6,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
                  'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
                  'is_dependency': False,
                  'length': 761,
                  'lines': list([
                    25,
                    26,
                    27,
                    28,
                    29,
                    30,
                    31,
                    32,
                    33,
                    34,
                    35,
                    36,
                    37,
                    38,
                    39,
                    40,
                    41,
                    42,
                    43,
                    44,
                    45,
                    46,
                    47,
                  ]),
                  'start': 936,
                  'starting_column': 5,
                }),
                'type': 'function',
                'type_specific_fields': dict({
                  'parent': dict({
                    'name': 'VectorSum',
                    'source_mapping': dict({
                      'ending_column': 2,
                      'filename_absolute': '/GENERIC_PATH',
                      'filename_relative': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
                      'filename_short': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol',
                      'is_dependency': False,
                      'length': 1602,
                      'lines': list([
                        5,
                        6,
                        7,
                        8,
                        9,
                        10,
                        11,
                        12,
                        13,
                        14,
                        15,
                        16,
                        17,
                        18,
                        19,
                        20,
                        21,
                        22,
                        23,
                        24,
                        25,
                        26,
                        27,
                        28,
                        29,
                        30,
                        31,
                        32,
                        33,
                        34,
                        35,
                        36,
                        37,
                        38,
                        39,
                        40,
                        41,
                        42,
                        43,
                        44,
                        45,
                        46,
                        47,
                        48,
                      ]),
                      'start': 97,
                      'starting_column': 1,
                    }),
                    'type': 'contract',
                  }),
                  'signature': 'sumPureAsm(uint256[])',
                }),
              }),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/assembly/0.5.16/inline_assembly_library.sol#L25-L47',
        'id': 'c0078585e7d2fe02dda5ea48ddb48b40916db51afbee078f77bea648d1aa0315',
        'impact': 'Informational',
        'markdown': '''
          [VectorSum.sumPureAsm(uint256[])](tests/detectors/assembly/0.5.16/inline_assembly_library.sol#L25-L47) uses assembly
          	- [INLINE ASM](tests/detectors/assembly/0.5.16/inline_assembly_library.sol#L26-L46)
  
        ''',
      }),
    ]),
  ])
# ---
